SET(LIBNAME "bmp")
SET(LIBDIR "lib")
SET(VERSION_MAJOR "0")
SET(VERSION_MINOR "1")
SET(VERSION_PATCH "3")
SET(CMAKE_C_FLAGS -O2)
INCLUDE_DIRECTORIES(../include)
ADD_LIBRARY(${LIBNAME} SHARED bmpfile.c)
SET(VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")
SET_TARGET_PROPERTIES(${LIBNAME} PROPERTIES VERSION 0.1 SOVERSION 3)

INSTALL(TARGETS  ${LIBNAME}
    LIBRARY DESTINATION ${LIBDIR})
